--- a/MyYouthFutures/Views/Shared/_Layout.cshtml
+++ b/MyYouthFutures/Views/Shared/_Layout.cshtml
@@ -82,7 +82,16 @@
                             </ul>
                         </li>
                         @*<li class="donate"><a data-toggle="modal" data-target="#loginPopup">Login</a></li>*@
-                        <li class ="donate"><a asp-controller="Account" asp-action="Login"></a>Login</li>
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <li class="donate"><a asp-controller="Account" asp-action="Logout"></a>Logout</li>
+                        }
+                        else
+                        {
+                            <li class="donate"><a asp-controller="Account" asp-action="Login"></a>Login</li>
+                        }
+
+
                         <li class="donate"><a asp-area="" asp-controller="Home" asp-action="About" asp-fragment="Donate">Donate</a></li>@*TODO: This needs linked to the Media Section of the Donate Page*@
 
                     </ul>
