--- a/MyYouthFutures/Views/Account/Login.cshtml
+++ b/MyYouthFutures/Views/Account/Login.cshtml
@@ -6,12 +6,12 @@
             <div asp-validation-summary="ModelOnly"></div>
             <div class="form-group">
                 <label asp-for="Username">Username</label>
-                <input asp-for="Username"/>
+                <input asp-for="Username" value="test@email.com"/>
                 <span asp-validation-for="Username"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Password">Password</label>
-                <input asp-for="Password"/>
+                <input asp-for="Password" value ="P@ssw0rd!"/>
                 <span asp-validation-for="Password"></span>
             </div>
             <div class="form-group">
