--- a/MyYouthFutures/Views/Shared/_Layout.cshtml
+++ b/MyYouthFutures/Views/Shared/_Layout.cshtml
@@ -84,11 +84,11 @@
                         @*<li class="donate"><a data-toggle="modal" data-target="#loginPopup">Login</a></li>*@
                         @if (User.Identity.IsAuthenticated)
                         {
-                            <li class="donate"><a asp-controller="Account" asp-action="Logout"></a>Logout</li>
+                            <li><a asp-controller="Account" asp-action="Logout">Logout</a></li>
                         }
                         else
                         {
-                            <li class="donate"><a asp-controller="Account" asp-action="Login"></a>Login</li>
+                            <li><a asp-area="" asp-controller="Account" asp-action="Login">Login</a></li>
                         }
 
 
