All edits drop when user authenticates

--- a/MyYouthFutures/Views/Home/About.cshtml
+++ b/MyYouthFutures/Views/Home/About.cshtml
@@ -13,24 +13,16 @@
 </div>*@
 
 @Html.Partial("PartialViews/_TextQuestions")
-
-<edit-container>@Html.Partial("PartialViews/_IntroductionArticle")</edit-container>
-<edit-container>@Html.Partial("PartialViews/_FoundersMessage")</edit-container>
+@Html.Partial("PartialViews/_IntroductionArticle")
+@Html.Partial("PartialViews/_FoundersMessage")
 @Html.Partial("PartialViews/_History")
-<edit-container>@Html.Partial("PartialViews/_FirstYearService")</edit-container>
-
+@Html.Partial("PartialViews/_FirstYearService")
 @Html.Partial("PartialViews/_StreetOutreach")
-
 @Html.Partial("PartialViews/_BoardOfDirectors")
-
 @Html.Partial("PartialViews/_Staff")
-
 @Html.Partial("PartialViews/_Media")
-
 @Html.Partial("PartialViews/_Donors")
-
 @Html.Partial("PartialViews/_HelpPanel")
-
 @Html.Partial("PartialViews/_ListOfNeeds")
 
 @Html.Partial("PartialViews/_Contact")
