--- a/MyYouthFutures/Views/Shared/PartialViews/_FirstYearService.cshtml
+++ b/MyYouthFutures/Views/Shared/PartialViews/_FirstYearService.cshtml
@@ -12,13 +12,17 @@
     <section class="row more">
         @foreach (FirstYear_Service_Messages fsm in Model.FirstYear_Service_Messages)
         {
-            <div class="col-xs-12 col-md-4 more_volunteer">
-                <img src="@fsm.firstYearImage" title="Meal" alt="Meal">
-                <p class="vol_p mont_light_18_darkgray">@fsm.firstYearText</p>
-                <edit-link>
-                <edit-a controller="FirstYear_Service_Messages" route-id="@fsm.ID"></edit-a>
-                </edit-link>
+            <edit-container is-visible="User.Identity.IsAuthenticated">
+                <div class="editArea">
+                    <div class="col-xs-12 col-md-4 more_volunteer">
+                        <img src="@fsm.firstYearImage" title="Meal" alt="Meal">
+                        <p class="vol_p mont_light_18_darkgray">@fsm.firstYearText</p>
+                        <edit-link is-visible="User.Identity.IsAuthenticated">
+                            <edit-a controller="FirstYear_Service_Messages" route-id="@fsm.ID" is-visible="User.Identity.IsAuthenticated"></edit-a>
+                        </edit-link>
                     </div>
+                </div>
+            </edit-container>
 
         }
     </section>
