--- a/MyYouthFutures/Views/Shared/PartialViews/_IntroductionArticle.cshtml
+++ b/MyYouthFutures/Views/Shared/PartialViews/_IntroductionArticle.cshtml
@@ -1,15 +1,17 @@
 ﻿@* ------INTRODUCTION ARTICLE ------ *@
-<div class="container-fluid" >
+<div class="container-fluid">
     <div class="row history_text">
         <section class="col-xs-12">
             @foreach (introArticle ia in Model.introArticles)
             {
                 if (ia.ID == 1)
                 {
-                    <p class="mont_regular_22_darkgray  editArea">@ia.ArticleText</p>
-                    <edit-link>
-                        <edit-a controller="introArticles" route-id="@ia.ID"></edit-a>
-                    </edit-link>
+                    <edit-container is-visible="User.Identity.IsAuthenticated">
+                        <p class="mont_regular_22_darkgray  editArea">@ia.ArticleText</p>
+                        <edit-link is-visible="User.Identity.IsAuthenticated">
+                            <edit-a controller="introArticles" route-id="@ia.ID" is-visible="User.Identity.IsAuthenticated"></edit-a>
+                        </edit-link>
+                    </edit-container>
                 }
             }
         </section>
