--- a/MyYouthFutures/Views/Shared/PartialViews/_StreetOutreach.cshtml
+++ b/MyYouthFutures/Views/Shared/PartialViews/_StreetOutreach.cshtml
@@ -19,7 +19,7 @@
 @* ------ STREET OUTREACH ------ *@
 <div id="street_outreach" class="container-fluid">
     <div class="row outreach_bullet">
-        <edit-container>
+        <edit-container is-visible="User.Identity.IsAuthenticated">
             <section class="col-xs-12 col-md-6 editArea">
                 <ul>
                     @foreach (List_Item outli in Model.List_item)
@@ -27,8 +27,8 @@
                         if (outli.TypeOfList.Equals("outReach"))
                         {
                             <li>@outli.LiText</li>
-                            <edit-link>
-                                <edit-a controller="List_Item" route-id="@outli.ID"></edit-a>
+                            <edit-link is-visible="User.Identity.IsAuthenticated">
+                                <edit-a controller="List_Item" route-id="@outli.ID" is-visible="User.Identity.IsAuthenticated"></edit-a>
                             </edit-link>
                         }
 
@@ -36,7 +36,7 @@
                 </ul>
             </section>
         </edit-container>
-        <edit-container>
+        <edit-container is-visible="User.Identity.IsAuthenticated">
             <section class="col-xs-12 col-md-6 editArea">
                 <ul>
                     @foreach (List_Item outli1 in Model.List_item)
@@ -44,8 +44,8 @@
                         if (outli1.TypeOfList.Equals("outReach1"))
                         {
                             <li>@outli1.LiText</li>
-                            <edit-link>
-                                <edit-a controller="List_Item" route-id="@outli1.ID"></edit-a>
+                            <edit-link is-visible="User.Identity.IsAuthenticated">
+                                <edit-a controller="List_Item" route-id="@outli1.ID" is-visible="User.Identity.IsAuthenticated"></edit-a>
                             </edit-link>
                         }
 
