--- a/MyYouthFutures/Views/Shared/PartialViews/_Services.cshtml
+++ b/MyYouthFutures/Views/Shared/PartialViews/_Services.cshtml
@@ -43,7 +43,7 @@
                             </section>
                             <section class="panel-footer">
                                 <p class="quicksand-light-24-green">
-                                    <a href="#">Learn more ></a>
+                                    <a href="@SM.Link">Learn more ></a>
                                 </p>
                             </section>
                         </article>
